# hw-19.2

./: .gitignore  pyproject.toml
catalog/: views.py
catalog/templates/: contacts.html  home.html
config/: settings.py
