[tool.poetry]
name = "hw-19-2"
version = "0.1.0"
description = ""
authors = ["Katya Smirnova <vismanork@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
